fixed portfolio look on mobile

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ nav {
 }
 
 .img-thumbnail {
-    height: 400px;
-    width: 400px;
+    /* height: 400px; */
+    width: 300px;
 }
 
 .list-group-item {
